--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,75 +1,128 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 .home {
-    text-align: center;
-    padding: 20px;
-  }
-  
-  .intro {
-    margin-bottom: 20px;
-  }
-  
-  .intro h2 {
-    font-size: 1.0em;
-    margin-bottom: 10px;
-    text-align: center;
-    padding-top: 30px;
-    background-color: #0ec9b9;
-    padding: 10px 20px;
-  }
-  
-  .main-content {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start; 
-    flex-wrap: wrap;
-    gap: 20px;
-  }
-  
-  .left-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-right: 40px;
-    padding-top: 45px;
-  }
-  
-  .intro-img {
-    border-radius: 50%;
-    width: 350px;
-    height: 350px;
-  }
-  
-  .right-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; 
-    padding-top: 100px; 
-    margin-left: 75px;
-  }
-  
-  .right-content button {
-    margin: 10px;
-    padding: 10px 20px;
-    font-size: 1em;
-    cursor: pointer;
-    text-align: center; 
-    width: 200px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s ease, transform 0.3s ease;
-  }
-  
-  .right-content button:hover {
-    background-color: #0056b3;
-    transform: translateY(-2px);
-  }
-  
-  .right-content button:active {
-    background-color: #004085;
-    transform: translateY(0);
-  }
-  
-  
+  text-align: center;
+  padding: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.intro {
+  margin-bottom: 20px;
+}
+
+.intro h2 {
+  font-size: 1.0em;
+  margin-bottom: 10px;
+  text-align: center;
+  padding-top: 30px;
+  background-color: #0ec9b9;
+  padding: 10px 20px;
+}
+
+.main-content {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start; 
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.left-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 40px;
+  padding-top: 45px;
+}
+
+.intro-img {
+  border-radius: 50%;
+  width: 350px;
+  height: 350px;
+}
+
+.right-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; 
+  padding-top: 100px; 
+  margin-left: 75px;
+}
+
+.right-content button {
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 1em;
+  cursor: pointer;
+  text-align: center; 
+  width: 200px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.right-content button:hover {
+  background-color: #0056b3;
+  transform: translateY(-2px);
+}
+
+.right-content button:active {
+  background-color: #004085;
+  transform: translateY(0);
+}
+
+.video-section {
+  margin-top: 40px;
+}
+
+.video-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.sections {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 40px;
+}
+
+.section {
+  background-color: #34f4e4d6;
+  padding: 20px;
+  margin: 0px;
+  border-radius: 5px;
+  width: 200px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.section h3 {
+  margin-bottom: 10px;
+}
+
+.section p {
+  margin-bottom: 10px;
+}
+
+.section button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.section button:hover {
+  background-color: #0056b3;
+}
+
+.section:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
+}
