--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,12 +1,18 @@
 .footer {
-    background-color: #0ec9b9;
-    color: black;
-    padding: 10px;
-    text-align: center;
-    margin-top: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
+  background-color: #0ec9b9;
+  color: black;
+  padding: 10px;
+  text-align: center;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+
+
+
