--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,12 +7,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 40px;
-  position: fixed;
+  position: absolute;
   bottom: 0;
-  width: 100%;
+  left: 0;
+  right: 0;
 }
-
-
-
-
