--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -6,12 +6,14 @@
   
   .contact-details {
     display: inline-block;
-    text-align: left;
+    text-align: center;
     margin-top: 20px;
+    padding: 20px;
   }
   
-  .contact-details h3 {
-    font-size: 1.5em;
+  .contact-details h2 {
+    margin-top: 10px;
+    font-size: 2.0em;
     margin-bottom: 10px;
   }
   
