--- a/src/pages/Experience.css
+++ b/src/pages/Experience.css
@@ -86,4 +86,22 @@
     height: 20px;
     margin-right: 10px;
   }
-  
+  .footer1 h2 {
+    font-size: 0.8em;
+    margin-bottom: 0px;
+    text-align: center;
+    padding-top: 30px;
+    background-color: #0ec9b9;
+    padding: 10px 20px;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
