--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,23 +8,20 @@
   background: #fff;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   font-family: 'Roboto', sans-serif;
-  margin-top: 25px;
-  
-  
+  position: relative;
 }
+
 .logo {
   display: flex;
   align-items: center;
-  margin-left: 200px;
-  font-size: 1.0em;
-  
+  font-size: 1.2em;
 }
 
 .profile-img {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  margin-right: 5px;
+  margin-right: 10px;
 }
 
 .logo span {
@@ -34,14 +31,11 @@
 nav ul {
   list-style: none;
   display: flex;
-  margin-right: 200px;
   padding: 0;
 }
 
 nav ul li {
-  margin-left: 45px; 
-  text-align: justify;
-  
+  margin-left: 20px; 
 }
 
 nav ul li a {
@@ -54,4 +48,3 @@ nav ul li a {
 nav ul li a:hover {
   color: #007bff;
 }
-
