--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 10px 20px;
   background: #fff;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   font-family: 'Roboto', sans-serif;
   position: relative;
 }
@@ -25,17 +25,18 @@
 }
 
 .logo span {
-  margin-left: 5px; 
+  margin-left: 10px;
 }
 
 nav ul {
   list-style: none;
   display: flex;
   padding: 0;
+  margin: 0;
 }
 
 nav ul li {
-  margin-left: 20px; 
+  margin-left: 20px;
 }
 
 nav ul li a {
